# ap01

./: .gitignore  .gitmodules  LICENSE  README.md
asm/: max.s
c/projects/geometry/: geometry.c  (+2 more)
c/singles/: arrays.c  compare.c  function.c  iteration.c  memory.c  pointers.c  selection.c  struct.c
cpp/: polymorphism.cpp
cs/ClassApp/: Class.cs
cs/CompareApp/: Compare.cs
cs/FunctionApp/: Function.cs
cs/GeometryApp/: Geometry.cs  Program.cs
cs/PolymorphismApp/: Polymorphism.cs
cs/SelectionIterationApp/: SelectionIteration.cs
esp/console_espidf/: CMakeLists.txt
esp/digitalio_arduino/: wokwi.toml
esp/digitalio_espidf/: diagram.json
esp/fatfs_mpu6050_espidf/: CMakeLists.txt  sdkconfig.defaults
esp/fatfs_mpu6050_espidf/main/: CMakeLists.txt  main.c  mpu6050_i2c.c  mpu6050_i2c.h
esp/freertos_semaphore_espidf/: diagram.json
esp/freertos_task_espidf/: sdkconfig.old
esp/hwaccess_arduino/: diagram.json
esp/mpu6050_espidf/: diagram-la.json
js/singles/: arrays.js  class.js  function.js  iteration.js  polymorphism.js  references.js  struct.js
js/websites/: clickword.html  clickword.js  css-example.css  css-example.html  game.html  game.js  input-example.html  input-example.js  js-example.html  js-example.js  plotcsv.csv  plotcsv.html
py/notebooks/: analysedata.ipynb  example.ipynb
py/singles/: address-struct.py  arrays.py  binary-search.py  call-stack.py  class.py  compare-times-sort.py  dijkstra.py  function.py  heapsort.py  iteration.py  polymorphism.py  recursion.py  references.py  selection.py  tk-draw.py
unity/SimpleGame/: .gitignore
(+33 files in other folders)
